Getting and showing data from API

--- a/src/app/drawer/drawer.component.html
+++ b/src/app/drawer/drawer.component.html
@@ -27,4 +27,4 @@
   />
 </nav>
 
-<div *ngIf="loaded" class="overlay"></div>
+<div #overlay *ngIf="loaded" class="overlay" (click)="moveDrawer()"></div>
