--- a/src/app/login/chaned-pass/chaned-pass.component.html
+++ b/src/app/login/chaned-pass/chaned-pass.component.html
@@ -18,6 +18,7 @@
         id="password"
         class="typicalInput"
         formControlName="password"
+        tabindex="1"
       />
       <button
         class="showPass"
@@ -44,6 +45,7 @@
         id="checkPassword"
         class="typicalInput"
         formControlName="checkPassword"
+        tabindex="2"
       />
       <button
         class="showPass"
@@ -57,6 +59,7 @@
       class="typicalInput"
       style="cursor: pointer;"
       [disabled]="changePassForm.invalid"
+      tabindex="3"
     >
       Submit
     </button>
