--- a/src/app/main/notes/sections-bar/sections-bar.component.scss
+++ b/src/app/main/notes/sections-bar/sections-bar.component.scss
@@ -8,12 +8,15 @@
   box-shadow: 3px 0 0 $default-darker-shadow;
 
   overflow: hidden;
+  overflow-y: auto;
+
+  user-select: none;
 
   img.move{
     opacity: .5;
     max-width: 30px;
     max-height: 30px;
-    margin: 1rem 1rem 2rem;
+    margin: 1rem 1rem 0 1rem;
 
     cursor: pointer;
 
@@ -25,7 +28,6 @@
 
   ul {
     overflow: hidden;
-
     li {
       background-color: $base-shade;
       color: white;
@@ -48,6 +50,7 @@
     img{
       display: block;
       margin-left: auto;
+      margin-bottom:1rem;
     }
     li {
       width: 70%;
@@ -66,6 +69,7 @@
     }
     ul.pages {
       margin-right: 1rem;
+      margin-top: 1.5rem;
       li {
         float: right;
       }
