Getting all data

--- a/src/app/main/notes/options-bar/options-bar.component.html
+++ b/src/app/main/notes/options-bar/options-bar.component.html
@@ -1,7 +1,7 @@
 <div class="options-container">
     <div class="text">
         <p>Naposledy uložené</p>
-        <p class="date">25/03/2020 13:14</p>
+        <p class="date">{{noteS.lastSave}}</p>
     </div>
 
 
