--- a/src/assets/shared/variables.scss
+++ b/src/assets/shared/variables.scss
@@ -1,5 +1,6 @@
 // colors
 $base-shade-bright: #9DE2F9;
+$base-shade-bright15: rgba(157, 226, 249, 0.15);
 $base-color: #3DA8CC;
 $base-shade: #1F81A2;
 $accent-color: #FFA545;
