--- a/src/assets/shared/variables.scss
+++ b/src/assets/shared/variables.scss
@@ -1,12 +1,13 @@
 // colors
 $base-shade-bright: #9DE2F9;
-$base-shade-bright15: rgba(157, 226, 249, 0.15);
+$base-shade-bright15: #9de2f926;
 $base-color: #3DA8CC;
 $base-shade: #1F81A2;
 $accent-color: #FFA545;
 $accent-shade1:#FF921F;
 $accent-shade2: #FA8000;
-$neutral-gray-light: #F9FAFB;
+$neutral-gray-light: #f9fafb;
+$neutral-gray-light-darker: #f0f2f5;
 $neutral-gray-dark: #1A4950;
 
 //text
