--- a/src/app/main/notes/sections-bar/sections-bar.component.scss
+++ b/src/app/main/notes/sections-bar/sections-bar.component.scss
@@ -60,6 +60,7 @@
       font-weight: bold;
       font-size: 19px;
       text-align: center;
+
     }
   }
 
@@ -103,5 +104,65 @@
         }
       }
     }
+  }
+
+  .contextMenuShow{
+    display: block;
+    flex-direction: column;
+    align-items: center;
+
+    position: absolute;
+
+    border-radius: 10px;
+    background: $neutral-gray-light-darker;
+
+    box-shadow: 5px 5px 0 $default-darker-shadow;
+
+    z-index: 10;
+
+    height: auto;
+    width: 120px;
+
+    padding: .3rem;
+
+    svg#colors{
+      position: relative;
+      display: flex;
+      margin: .1rem auto 0;
+      height: 25px;
+      width: 90%;
+
+      circle{
+        cursor: pointer;
+
+        &:hover{
+          transition: 50ms ease;
+          transform: translateY(-3px);
+        }
+      }
+    }
+
+    hr{
+      width: 90%;
+      color: $text-default;
+      margin: 0 auto;
+    }
+
+    .magageButtons{
+      margin: .3rem auto;
+
+      width: 90%;
+
+      .manageItem{
+        display: flex;  
+        cursor: pointer;
+  
+        hr{
+          width: auto;
+        }
+      }
+    }
+
+    
   }
 }
