locally working reordering

--- a/src/assets/shared/variables.scss
+++ b/src/assets/shared/variables.scss
@@ -13,6 +13,9 @@ $neutral-gray-dark: #1A4950;
 //text
 $text-default : #424242;
 
+//selections
+$hover-background: #d7dde4;
+
 //shadows
 $default-darker-shadow: #00000013;
 $hover-shadow: #0000006e;
