--- a/src/app/main/notes/sections-bar/sections-bar.component.scss
+++ b/src/app/main/notes/sections-bar/sections-bar.component.scss
@@ -12,23 +12,24 @@
 
   user-select: none;
 
-  img.move{
-    opacity: .5;
+  img.move {
+    opacity: 0.5;
     max-width: 30px;
     max-height: 30px;
     margin: 1rem 1rem 0 1rem;
 
     cursor: pointer;
 
-    &:hover{
-        transition: 50ms ease;
-        opacity: 1;
+    &:hover {
+      transition: 50ms ease;
+      opacity: 1;
     }
-}
+  }
 
   ul {
     overflow: hidden;
     li {
+      transition: 50ms ease;
       background-color: $base-shade;
       color: white;
 
@@ -37,35 +38,70 @@
       cursor: pointer;
 
       &:hover,
+      &:focus,
       &.selected {
         transition: 100ms ease;
         background-color: $accent-shade2;
         box-shadow: 0px 6px 0px $default-darker-shadow;
-        transform: translateY(-5px);
+      }
+
+      input {
+        color: white;
+        border: none;
+        background: none;
+        width: 100%;
+        height: 100%;
+
+        &::selection{
+          background: $accent-shade2;
+        }
       }
     }
   }
 
   ul.sections {
-    img{
+    img {
       display: block;
       margin-left: auto;
-      margin-bottom:1rem;
+      margin-bottom: 1rem;
     }
+
+    .hrWrapper {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      height: 12px;
+      width: 90%;
+
+      margin: 0 auto;
+
+      hr {
+        pointer-events: none;
+
+        visibility: hidden;
+        &.hoverDrop {
+          visibility: visible;
+        }
+      }
+    }
+
     li {
       width: 70%;
-      margin: 1rem auto;
+      margin: 0.2rem auto;
       padding: 0.2rem 1rem;
 
-      font-weight: bold;
-      font-size: 19px;
-      text-align: center;
-
+      &,
+      input {
+        font-weight: bold;
+        font-size: 19px;
+        text-align: center;
+      }
     }
   }
 
   .pagesWrapper {
-    img{
+    img {
       transform: rotate(-180deg);
     }
     ul.pages {
@@ -106,7 +142,7 @@
     }
   }
 
-  .contextMenuShow{
+  .contextMenuShow {
     display: block;
     flex-direction: column;
     align-items: center;
@@ -121,48 +157,60 @@
     z-index: 10;
 
     height: auto;
-    width: 120px;
+    width: 150px;
 
-    padding: .3rem;
+    padding: 0.3rem;
 
-    svg#colors{
+    svg#colors {
       position: relative;
       display: flex;
-      margin: .1rem auto 0;
+      margin: 0.1rem auto 0;
       height: 25px;
       width: 90%;
 
-      circle{
+      circle {
         cursor: pointer;
 
-        &:hover{
+        &:hover {
           transition: 50ms ease;
           transform: translateY(-3px);
         }
       }
     }
 
-    hr{
+    hr {
       width: 90%;
       color: $text-default;
       margin: 0 auto;
     }
 
-    .magageButtons{
-      margin: .3rem auto;
-
+    .magageButtons {
+      margin: 0.3rem auto;
       width: 90%;
 
-      .manageItem{
-        display: flex;  
+      .manageItem {
+        display: flex;
         cursor: pointer;
-  
-        hr{
-          width: auto;
+
+        border-radius: 10px;
+
+        padding: 0.2rem 0.3rem;
+
+        &:hover {
+          background: $hover-background;
+        }
+
+        .icon {
+          display: flex;
+          align-content: center;
+          justify-content: center;
+          min-width: 30px;
+        }
+
+        p {
+          overflow-wrap: normal;
         }
       }
     }
-
-    
   }
 }
