--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,10 @@ body{
   overflow-y: auto;
 }
 
+hr{
+  border: .5px solid $hover-shadow;
+}
+
 a, button {
   cursor: pointer;
   color: $neutral-gray-dark;
