fully working version 1 section of notes + some minor improvements for pages

--- a/src/app/main/notes/content/content.component.html
+++ b/src/app/main/notes/content/content.component.html
@@ -3,7 +3,7 @@
     <input
       type="text"
       [value]="notesS.selectedPage ? notesS.selectedPage.title : ''"
-      (blur)="notesS.selectedPage.title = $event.target.value"
+      (blur)="onUpdateTitle($event)"
     />
   </div>
   <div
