--- a/src/assets/shared/variables.scss
+++ b/src/assets/shared/variables.scss
@@ -5,7 +5,8 @@ $base-color: #3DA8CC;
 $base-shade: #1F81A2;
 $accent-color: #FFA545;
 $accent-shade1:#FF921F;
-$accent-shade2: #FA8000;
+$accent-shade2: #fa8000;
+$accent-shade3: hsl(31, 100%, 42%);
 $neutral-gray-light: #f9fafb;
 $neutral-gray-light-darker: #f0f2f5;
 $neutral-gray-dark: #1A4950;
