--- a/src/app/main/notes/sections-bar/sections-bar.component.scss
+++ b/src/app/main/notes/sections-bar/sections-bar.component.scss
@@ -65,7 +65,7 @@
         box-shadow: 0px 6px 0px $default-darker-shadow;
       }
 
-      &:active{
+      &:active {
         background: $accent-shade3;
       }
 
@@ -76,7 +76,7 @@
         width: 100%;
         height: 100%;
 
-        &::selection{
+        &::selection {
           background: $accent-shade2;
         }
       }
@@ -111,14 +111,19 @@
     ul.pages {
       margin-right: 1rem;
       margin-top: 1.5rem;
+      $pagesWidth: 14.7916vw;
+
+      &:last-child{
+        margin-bottom: 1rem;
+      }
 
       li {
         float: right;
       }
 
       li.top {
-        width: 85%;
-        margin-top: 0.5rem;
+        width: $pagesWidth * 0.85;
+        margin-top: 1rem;
         padding: 0.2rem 0;
 
         font-weight: bold;
@@ -126,21 +131,28 @@
         text-align: center;
       }
 
-      .lowerWrapper{
-
+      li.lower {
         margin: 0 0 0 auto;
+        font-size: 15px;
+        text-align: left;
+        width: 90%;
+        padding: 0.2rem 0.25rem;
 
-        &.first, &.second, &.third  {
-          width: 75%;
+        &.first {
+          width: $pagesWidth * 0.8;
         }
 
-        li.lower {
-          font-size: 15px;
-          text-align: left;
-          width: 90%;  
-          padding: .2rem .25rem;
+        &.second {
+          width: $pagesWidth * 0.6;
         }
 
+        &.third {
+          width: $pagesWidth * 0.4;
+        }
+      }
+
+      &:first-child{
+        margin-top: 0;
       }
     }
   }
@@ -157,7 +169,7 @@
 
     box-shadow: 5px 5px 0 $default-darker-shadow;
 
-    z-index: 10;
+    z-index: 100;
 
     height: auto;
     width: 150px;
@@ -190,6 +202,26 @@
     .magageButtons {
       margin: 0.3rem auto;
       width: 90%;
+
+      .halfItem,
+      .halfItem .rightHalf {
+        display: flex;
+        flex-direction: row;
+
+        .leftHalf {
+          width: 50%;
+          border-radius: 10px 0 0 10px;
+          svg {
+            transform: rotate(180deg);
+          }
+        }
+
+        .rightHalf {
+          width: 50%;
+          border-radius: 0 10px 10px 0;
+          justify-content: flex-end;
+        }
+      }
 
       .manageItem {
         display: flex;
